--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "Lluis Agusti <hi@llu.lu>"
   ],
   "dependencies": {
-    "next": "latest",
-    "next-auth": "latest",
+    "next": "12.2.5",
+    "next-auth": "4.10.3",
     "nodemailer": "^6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
